--- a/src/components/searchByKeyWordsFormComponent/SearchByKeyWords.module.css
+++ b/src/components/searchByKeyWordsFormComponent/SearchByKeyWords.module.css
@@ -10,7 +10,7 @@
     background-color: #04AA6D;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+    height: 40px;
 
 }
 
@@ -27,6 +27,6 @@
     border-radius: 15px;
     border: none;
     height: 40px;
-    width: 300px;
-    font-size: 24px;
+    width: 200px;
+    font-size: 20px;
 }
