--- a/src/components/headerComponent/Header.module.css
+++ b/src/components/headerComponent/Header.module.css
@@ -1,10 +1,20 @@
-.Header {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    justify-content: center;
+.HeaderLight {
+    display: flex;
+    justify-content:space-around;
     align-items: center;
     font-size: 30px;
     background-color: #c6c6c6;
+    color: white;
+    box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    border: none;
+}
+.HeaderDark {
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    font-size: 30px;
+    background-color:slateblue;
     color: white;
     box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
